--- a/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor.scss
+++ b/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor.scss
@@ -1,29 +1,48 @@
-﻿label {
+﻿form {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 16px;
 
-    span {
-        font-size: 1.2rem;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 140%; /* 16.8px */
-        letter-spacing: -0.12px;
-    }
 
-    input, select {
+    label {
         display: flex;
-        padding: 16px;
         flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 10px;
-        border-radius: 26px;
-        border: 1px solid var(--purple-100);
-        opacity: 0.5;
+        gap: 8px;
+
+        span {
+            font-size: 1.2rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 140%; /* 16.8px */
+            letter-spacing: -0.12px;
+        }
+
+        input, select {
+            display: flex;
+            padding: 16px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 10px;
+            border-radius: 26px;
+            border: 1px solid var(--purple-100);
+            opacity: 0.5;
+        }
+
+        select {
+            width: 50%;
+        }
     }
 
-    select {
-        width: 50%;
+    .form-group {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 16px;
+
+        label {
+            width: 50%;
+        }
     }
 }
