--- a/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor.css
+++ b/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor.css
@@ -1,16 +1,21 @@
-﻿label {
+﻿form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+form label {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-label span {
+form label span {
   font-size: 1.2rem;
   font-style: normal;
   font-weight: 500;
   line-height: 140%; /* 16.8px */
   letter-spacing: -0.12px;
 }
-label input, label select {
+form label input, form label select {
   display: flex;
   padding: 16px;
   flex-direction: column;
@@ -21,6 +26,16 @@ label input, label select {
   border: 1px solid var(--purple-100);
   opacity: 0.5;
 }
-label select {
+form label select {
+  width: 50%;
+}
+form .form-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+}
+form .form-group label {
   width: 50%;
 }
