--- a/Sparc2/Sparc2/Catalog/Purchase/PurchaseBilling.razor.css
+++ b/Sparc2/Sparc2/Catalog/Purchase/PurchaseBilling.razor.css
@@ -1,32 +1,64 @@
-﻿dl {
-  display: flex;
-  flex-direction: column;
-  gap: 11px;
-  margin: 0;
-}
-dl .row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  gap: 6.5px;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%; /* 25.2px */
-  color: var(--purple-700);
-}
-dl .row.discount {
-  opacity: 0.6;
-}
-dl .row.total {
-  font-size: 2.133rem;
+﻿h5 {
+  font-size: 2.1323rem;
   font-style: normal;
   font-weight: 500;
-  line-height: 110%; /* 23.463px */
+  line-height: 110%;
 }
-dl .divider {
-  height: 1px;
-  background: var(--purple-700);
-  margin: 13px 0;
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+}
+.form-group.discount {
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+.form-group.discount label {
+  width: 50%;
+}
+.form-group.discount button {
+  background: transparent;
+  display: flex;
+  height: 48px;
+  padding: 10px 20px;
+  justify-content: center;
+  align-items: center;
+  color: var(--purple-700);
+}
+.form-group.discount button:hover {
+  border-radius: 32px;
+  border: 1px solid var(--purple-700);
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+}
+label span {
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
+  letter-spacing: -0.12px;
+}
+label input {
+  display: flex;
+  padding: 16px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 26px;
+  border: 1px solid var(--purple-100);
+  opacity: 0.5;
 }
