--- a/Sparc2/Sparc2/Catalog/Purchase/PurchaseLicenseType.razor.scss
+++ b/Sparc2/Sparc2/Catalog/Purchase/PurchaseLicenseType.razor.scss
@@ -1,36 +1,113 @@
-dl {
+h5 {
+    font-size: 2.1323rem;
+    font-weight: 500;
+    line-height: 110%;
+}
+
+.form-container {
     display: flex;
     flex-direction: column;
-    gap: 11px;
-    margin: 0;
+    gap: 16px;
 
-    .row {
+    > label {
         display: flex;
-        flex-direction: row;
         align-items: center;
-        justify-content: space-between;
-        gap: 6.5px;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 140%; /* 25.2px */
-        color: var(--purple-700);
+        padding: 32px;
+        gap: 12px;
+        border: 1px solid var(--Color-Purple-500, #6A2FD0);
+        border-radius: 16px;
+        box-shadow: 0px 0px 2px rgba(26, 12, 50, 0.10), 0px 0px 4px rgba(26, 12, 50, 0.20);
 
-        &.discount {
-            opacity: 0.6;
-        }
-
-        &.total {
+        span {
             font-size: 2.133rem;
-            font-style: normal;
             font-weight: 500;
-            line-height: 110%; /* 23.463px */
+            line-height: 110%;
         }
-    }
 
-    .divider {
-        height: 1px;
-        background: var(--purple-700);
-        margin: 13px 0;
+        &.gift {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 32px;
+
+            .gift-email {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+                gap: 12px;
+
+                div {
+                    display: flex;
+                    align-items: center;
+                    gap: 12px;
+                }
+            }
+
+            .right {
+                span {
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 140%;
+                    color: var(--black);
+                    margin-right: 4px;
+                }
+
+                button {
+                    margin-top: 0;
+                    opacity: unset;
+                }
+            }
+
+            .gift-form {
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+                width: 100%;
+
+                label {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    gap: 8px;
+
+                    span {
+                        font-size: 12px;
+                        font-weight: 500;
+                        line-height: 140%;
+                        color: var(--gray-900);
+                    }
+
+                    input {
+                        width: calc(100% - 32px);
+                        padding: 8px 16px;
+                        border: 1px solid var(--gray-100);
+                        border-radius: 16px;
+                        background: var(--yellow-50);
+                    }
+                }
+            }
+
+            button {
+                height: 40px;
+                padding: 10px 20px;
+                border-radius: 20px;
+                border: 1px solid var(--purple-800);
+                background: var(--yellow-50);
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 140%;
+                opacity: 0.5;
+                margin-top: 16px;
+                width: fit-content;
+
+                &:hover {
+                    background: var(--gray-100);
+                }
+
+                &:active {
+                    background: var(--gray-600);
+                }
+            }
+        }
     }
 }
