--- a/Sparc2/Sparc2/Catalog/Purchase/PurchaseSummary.razor.scss
+++ b/Sparc2/Sparc2/Catalog/Purchase/PurchaseSummary.razor.scss
@@ -1,3 +1,10 @@
+h5 {
+    font-size: 2.133rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%; /* 23.463px */
+}
+
 dl {
     display: flex;
     flex-direction: column;
