--- a/Sparc2/Sparc2/Pages/TovikReferral.razor
+++ b/Sparc2/Sparc2/Pages/TovikReferral.razor
@@ -4,6 +4,7 @@
 @using System.Net.Http.Json
 @using System.Text.Json
 @using Microsoft.AspNetCore.Components.Forms
+@using System.Security.Claims
 
 @page "/tovik"
 
@@ -202,7 +203,7 @@
 
 
 @code {
-    BlossomUser? CurrentUser;
+    [CascadingParameter] public required ClaimsPrincipal CurrentUser { get; set; }
     private bool IsCheckingUser = true;
     private bool IsAddingProduct = false;
     string? Message;
@@ -213,7 +214,7 @@
     private string VerificationError = "";
     private bool ShowVerificationModal = false;
 
-    private bool HasTovikAccess => CurrentUser?.Products?.Any(p => p.ProductId == "Tovik") == true;
+    private bool HasTovikAccess => CurrentUser.HasClaim("product", "Tovik");
 
     private readonly List<(string, string)> BreadcrumbItems = new()
     {
@@ -221,25 +222,9 @@
         ("Tovik Beta Referral Program", "/tovik")
     };
 
-    protected override async Task OnInitializedAsync() => await GetUserInfo();
-
-    private async Task GetUserInfo()
-    {
-        IsCheckingUser = true;
-        try
-        {
-            CurrentUser = await SparcEngine.UserInfo();
-        }
-        finally
-        {
-            IsCheckingUser = false;
-        }
-    }
-
     private async Task AddTovikProduct()
     {
         await SparcEngine.AddUserProduct(new AddProductRequest("Tovik"));
-        await GetUserInfo();
     }
 
     private async Task TryAuthAndJoinBeta()
