--- a/Sparc2/Sparc2/Catalog/ProductPurchaseStripeForm.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPurchaseStripeForm.razor
@@ -14,6 +14,8 @@
 @inject NavigationManager NavManager
 @code {
     [Parameter] public CreateOrderRequest Order { get; set; } = default!;
+    private long SelectedAmount;
+    private string SelectedCurrency = "";
 
     private string? _clientSecret;
     private string? _publishableKey;
@@ -39,7 +41,7 @@
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
+    {        
         if (!_paymentSuccessful && !string.IsNullOrEmpty(_clientSecret) && !string.IsNullOrEmpty(_publishableKey) && !_stripeInitialized)
         {
             Console.WriteLine("ClientSecret received, initializing Stripe Payment Element via JS interop.");
@@ -73,7 +75,7 @@
         await InitiateStripePayment();
     }
 
-    private async Task InitiateStripePayment()
+    public async Task InitiateStripePayment()
     {
         if (Order.Amount <= 0)
         {
@@ -106,6 +108,8 @@
 
             var intent = await SparcEngine.CreateOrderPaymentAsync(request);
 
+            // var intenttwo = await SparcEngine.CreateOrderAsync(Order);
+
             _clientSecret = intent.ClientSecret;
             Console.WriteLine($"PaymentIntent created. ClientSecret obtained: {!string.IsNullOrEmpty(_clientSecret)}");
             StateHasChanged();
@@ -116,6 +120,11 @@
             _clientSecret = null;
             StateHasChanged();
         }
+    }
+
+    public async Task RefreshPaymentIntentAsync()
+    {
+        await InitiateStripePayment();
     }
 
     [JSInvokable]
